<resources>
    <string name="app_name">PeriodicTableApp</string>
    <string name="AtomDelivery">Atom Delivery</string>
    <string name="current_location">Current Location</string>
    <string name="address_line">Address Line</string>
    <string name="number">Number</string>
    <string name="postalCode">Postal Code</string>
    <string name="districts">Districts</string>
    <string name="city">City</string>
    <string name="state_province">State/Province</string>
    <string name="clean">Clean</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overview">Overview</string>
    <string name="atomicnumber">Atomic number</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="atomicmass">Atomic mass</string>
    <string name="eletronicconfiguration">Eletronic configuration</string>
    <string name="electronegativity">Electronegativity</string>
    <string name="atomiradius">Atomic radius</string>
    <string name="ionradius">Ion radius</string>
    <string name="vanderwaalsradius">Van Der Waals radius</string>
    <string name="ionizationenergy">Ionization Energy</string>
    <string name="electroaffinity">Electro affinity</string>
    <string name="oxidationstate">Oxidantion state</string>
    <string name="standardstate">Standard state</string>
    <string name="bondingtype">Bonding type</string>
    <string name="meltingpoint">Melting point</string>
    <string name="boilingtype">Boiling type</string>
    <string name="density">Density</string>
    <string name="groupblock">Group Block</string>
    <string name="yeardiscovered">Year Discovered</string>
    <string name="block">Block</string>
    <string name="period">Period</string>
    <string name="group">Group</string>
</resources>