<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".DeliverySetup"
    android:paddingTop="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/ViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AtomDelivery" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <!-- BOTÃO CURRENT LOCATION -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@color/gray_color">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_atomo_menu"
                    android:background="null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    style="@style/ViewTitle"
                    android:textSize="16dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <!-- INPUTS -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_line"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_addressLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postalCode"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_postalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/districts"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_districts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_province"
                    style="@style/ViewTitle"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/input_state_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputs"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clean"
                    android:backgroundTint="@color/gray_color"
                    style="@style/buttonStyle"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    />

                <Button
                    android:layout_weight="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:backgroundTint="@color/principal_color"
                    style="@style/buttonStyle"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/AtomoDelivery_menu"
        layout="@layout/menu_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>